Made some improvement according to GWT

--- a/archived.html
+++ b/archived.html
@@ -1,5 +1,7 @@
 ---
 layout: base
+title: Olivier Dolbeau - Blog - Archived posts
+description: All archived articles written by Olivier Dolbeau
 ---
 
 <h1>Archived posts</h1>
