--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: base
+title: Olivier Dolbeau - Blog
+description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP & Symfony2
 ---
 
 <h1>Posts</h1>
