Add last conferences on homepage

--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
 <h1>Talks</h1>
 <ul>
     <li>
+        <a href="https://speakerdeck.com/odolbeau/making-asynchronous-tasks-in-php">
+            Swarrot - a library to consume them all
+        </a> - sfLive Paris, 7 April 2014 (Lightning talk)
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/making-asynchronous-tasks-in-php">
+            Making asynchronous tasks in PHP - The easy way
+        </a> - sfLive Paris, 7 April 2014 (with <a href="http://blog.lyrixx.info/">Lyrixx</a>)
+    </li>
+    <li>
         <a href="https://speakerdeck.com/odolbeau/3-millions-users-in-10-countries-techincal-history-of-blablacar">
             3 millions users in 10 countries: Technical history of BlaBlaCar
-        </a> - ForumPHP Paris, 21 November 2013 (Talk in French)
+        </a> - ForumPHP Paris, 21 November 2013
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/retour-dexperience-sur-lutilisation-de-rabbitmq-chez-blablacar">
