--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
 <h1>Talks</h1>
 <ul>
     <li>
+        <a href="https://speakerdeck.com/odolbeau/asynchronous-tasks-in-php">
+            Asynchronous tasks in PHP
+        </a> - PHPTour Lyon, 24 June 2014
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/doctrine-lexer-use-case">
+            Doctrine Lexer use case
+        </a> - PHPTour Lyon, 24 June 2014
+    </li>
+    <li>
         <a href="https://speakerdeck.com/odolbeau/making-asynchronous-tasks-in-php">
             Swarrot - a library to consume them all
         </a> - sfLive Paris, 7 April 2014 (Lightning talk)
