--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
 <ul>
     <li>
         <a href="https://speakerdeck.com/odolbeau/asynchronous-tasks-in-php">
+            "Laisse pas trainer ton log"
+        </a> - ForumPHP Paris, 23 October 2014
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/asynchronous-tasks-in-php">
+            When Monolog meet ELK
+        </a> - sfPot Paris, 15 July 2014
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/asynchronous-tasks-in-php">
             Asynchronous tasks in PHP
         </a> - PHPTour Lyon, 24 June 2014
     </li>
