--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
 <h1>Talks</h1>
 <ul>
     <li>
+        <a href="https://speakerdeck.com/odolbeau/dont-let-your-log-go-away">
+            "Don't let your log go away"
+        </a> - Paris Tech Talks Paris, 24 March 2015
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/microservices-at-blablacar">
+            "Microservices at BlaBlaCar"
+        </a> - sfPot Paris, 17 March 2015
+    </li>
+    <li>
         <a href="https://speakerdeck.com/odolbeau/asynchronous-tasks-in-php">
             "Laisse pas trainer ton log"
         </a> - ForumPHP Paris, 23 October 2014
