Add missing talks & correct dates

--- a/index.html
+++ b/index.html
@@ -24,54 +24,84 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
 <h1>Talks</h1>
 <ul>
     <li>
+        <a href="https://speakerdeck.com/odolbeau/when-monolog-meets-elk-and-bermudas">
+            "When monolog meets ELK (& bermudas!)"
+        </a> - PHPCon PL - November 15, 2015
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/from-1-to-20-millions-users-the-technical-story-of-blablacar">
+            "From 1 to 20 millions users: the technical story of BlaBlaCar"
+        </a> - PHPCon PL - November 14, 2015 (with <a href="https://twitter.com/Genes0r">Benjamin De Bernardi (aka Junior)</a>)
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/swarrot-a-library-to-consume-them-all-1">
+            "Swarrot, a library to consume them all!"
+        </a> - BlaBlaCar Tech meetUp Warsaw - October 20, 2015
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/slicing-up-a-monolithic-application-why-and-how">
+            "Slicing up a monolithic application."
+        </a> - Paris Web - October 2, 2015 (with <a href="https://twitter.com/bench1ps">Benjamin Fraud</a>)
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/symfony2-killed-me">
+            "Symfony2 killed me!"
+        </a> - sfPot Nantes - September 28, 2015
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/logs-hunting">
+            "Logs hunting"
+        </a> - sfLive Paris 2015 - April 9, 2015
+    </li>
+    <li>
         <a href="https://speakerdeck.com/odolbeau/dont-let-your-log-go-away">
             "Don't let your log go away"
-        </a> - Paris Tech Talks Paris, 24 March 2015
+        </a> - Paris Tech Talks Paris - March 24, 2015
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/microservices-at-blablacar">
             "Microservices at BlaBlaCar"
-        </a> - sfPot Paris, 17 March 2015
+        </a> - sfPot Paris - March 17, 2015
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/asynchronous-tasks-in-php">
             "Laisse pas trainer ton log"
-        </a> - ForumPHP Paris, 23 October 2014
+        </a> - ForumPHP Paris - October 23, 2014
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/asynchronous-tasks-in-php">
             When Monolog meet ELK
-        </a> - sfPot Paris, 15 July 2014
+        </a> - sfPot Paris - July 15, 2014
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/asynchronous-tasks-in-php">
             Asynchronous tasks in PHP
-        </a> - PHPTour Lyon, 24 June 2014
+        </a> - PHPTour Lyon - June 24, 2014
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/doctrine-lexer-use-case">
             Doctrine Lexer use case
-        </a> - PHPTour Lyon, 24 June 2014
+        </a> - PHPTour Lyon - June 24, 2014
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/making-asynchronous-tasks-in-php">
             Swarrot - a library to consume them all
-        </a> - sfLive Paris, 7 April 2014 (Lightning talk)
+        </a> - sfLive Paris - April 7, 2014 (Lightning talk)
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/making-asynchronous-tasks-in-php">
             Making asynchronous tasks in PHP - The easy way
-        </a> - sfLive Paris, 7 April 2014 (with <a href="http://blog.lyrixx.info/">Lyrixx</a>)
+        </a> - sfLive Paris - April 7, 2014 (with <a href="http://blog.lyrixx.info/">Lyrixx</a>)
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/3-millions-users-in-10-countries-techincal-history-of-blablacar">
             3 millions users in 10 countries: Technical history of BlaBlaCar
-        </a> - ForumPHP Paris, 21 November 2013
+        </a> - ForumPHP Paris - November 21, 2013
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/retour-dexperience-sur-lutilisation-de-rabbitmq-chez-blablacar">
             <img src="/assets/images/french_flag.png" height="12px" width="12px" />
             Retour d'expérience sur l'utilisation de RabbitMQ chez BlaBlaCar
-        </a> - sfPot Paris, 13 March 2013
+        </a> - sfPot Paris - March 13, 2013
     </li>
 </ul>
