Correct some titles

--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
 <ul>
     <li>
         <a href="https://speakerdeck.com/odolbeau/when-monolog-meets-elk-and-bermudas">
-            "When monolog meets ELK (& bermudas!)"
+            When monolog meets ELK (& bermudas!)
         </a> - PHPCon PL - November 15, 2015
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/from-1-to-20-millions-users-the-technical-story-of-blablacar">
-            "From 1 to 20 millions users: the technical story of BlaBlaCar"
+            From 1 to 20 millions users: the technical story of BlaBlaCar
         </a> - PHPCon PL - November 14, 2015 (with <a href="https://twitter.com/Genes0r">Benjamin De Bernardi (aka Junior)</a>)
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/swarrot-a-library-to-consume-them-all-1">
-            "Swarrot, a library to consume them all!"
+            Swarrot, a library to consume them all!
         </a> - BlaBlaCar Tech meetUp Warsaw - October 20, 2015
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/slicing-up-a-monolithic-application-why-and-how">
-            "Slicing up a monolithic application."
+            Slicing up a monolithic application.
         </a> - Paris Web - October 2, 2015 (with <a href="https://twitter.com/bench1ps">Benjamin Fraud</a>)
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/symfony2-killed-me">
-            "Symfony2 killed me!"
+            Symfony2 killed me!
         </a> - sfPot Nantes - September 28, 2015
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/logs-hunting">
-            "Logs hunting"
+            Logs hunting
         </a> - sfLive Paris 2015 - April 9, 2015
     </li>
     <li>
@@ -60,7 +60,7 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/microservices-at-blablacar">
-            "Microservices at BlaBlaCar"
+            Microservices at BlaBlaCar
         </a> - sfPot Paris - March 17, 2015
     </li>
     <li>
