--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
 <h1>Talks</h1>
 <ul>
     <li>
+        <a href="https://speakerdeck.com/odolbeau/elasticsearch-chez-blablacar">
+            Elasticsearch at BlaBlaCar
+        </a> - sfLive Paris 2016 - April 7, 2016
+    </li>
+    <li>
+        <a href="https://speakerdeck.com/odolbeau/symfony-at-blablacar">
+            Symfony at BlaBlaCar
+        </a> - SymfonyCon Paris 2015 - December 4, 2015 (with <a href="https://twitter.com/Genes0r">Benjamin De Bernardi (aka Junior)</a>)
+    </li>
+    <li>
         <a href="https://speakerdeck.com/odolbeau/when-monolog-meets-elk-and-bermudas">
             When monolog meets ELK (& bermudas!)
         </a> - PHPCon PL - November 15, 2015
