--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ description: Olivier Dolbeau blog. Contains technical articles, mainly about PHP
     <li>
         <a href="https://speakerdeck.com/odolbeau/making-asynchronous-tasks-in-php">
             Making asynchronous tasks in PHP - The easy way
-        </a> - sfLive Paris - April 7, 2014 (with <a href="http://blog.lyrixx.info/">Lyrixx</a>)
+        </a> - sfLive Paris - April 7, 2014 (with <a href="//blog.lyrixx.info/">Lyrixx</a>)
     </li>
     <li>
         <a href="https://speakerdeck.com/odolbeau/3-millions-users-in-10-countries-techincal-history-of-blablacar">
